# shunya

./: CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTION.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  test.ipynb  vwap_close_rank_backtest.ipynb  vwap_close_rank_backtest_yfinance.ipynb
backtest_api/: README.md  __init__.py  __main__.py  alpha_validation.py  backtest_resolve.py  backtest_windows.py  data_service.py  db.py  db_dashboard.py  errors.py  fin_ts_factory.py  health_checks.py  index_catalog.py  index_universe.py  inline_alpha.py  main.py  resolver.py  result_tune_filter.py  risk_metrics.py  runner.py  serializer.py  settings.py  timescale_classifications.py  worker.py
backtest_api/repositories/: __init__.py  alphas.py  backtests.py
backtest_api/routers/: __init__.py  alphas.py  backtests.py  data.py  indices.py  instruments.py
backtest_api/schemas/: __init__.py  models.py
backtest_api/services/: __init__.py  instrument_ohlcv.py
cursor-docs/: 1.txt
docs/: data_timescale.md  index.html  kiteconnect.html  search.js
docs/kiteconnect/: exceptions.html
examples/: alpha_benchmark_oex.ipynb  yfinance_fundamental_provider.py
examples/alphas/: README.md  __init__.py  breakout_20.py  fundamental_quality_yf.py  fundamental_value_quality.py  mean_reversion_20.py  sma20_deviation_rank.py  sma20_deviation_zscore.py  sma_ratio_20.py
examples/notebooks/: fundamental_value_quality_daily_backtest.ipynb
scripts/: bootstrap_example_alphas.py  bootstrap_sp500_ohlcv.py
shunya/: __init__.py
shunya/algorithm/: __init__.py  alpha_context.py  cross_section.py  decision.py  execution.py  finbt.py  finstrat.py  fintrade.py  group_ops.py  kite_execution.py  logical.py  orders.py  streaming_runner.py  targets.py
shunya/data/: __init__.py  fints.py  fundamentals.py  kite_provider.py  providers.py  validation.py  yfinance_session.py
shunya/data/timescale/: __init__.py  (+9 more)
shunya/utils/: __init__.py  indicators.py
src/: __init__.py
src/algorithm/: __init__.py  cross_section.py  decision.py  execution.py  finbt.py  finstrat.py  fintrade.py  targets.py  time_series.py
src/data/: __init__.py  cross_section.py  finbt.py  finstrat.py  fints.py  indicators.py  providers.py
src/utils/: indicators.py
tests/: conftest.py  test_constraints.py  test_cross_section.py  test_data_qa.py  test_decision.py  test_execution_adapter.py  test_finbt.py  test_finstrat.py  test_finstrat_config_schema.py  test_fintrade.py  test_fints_classification.py  test_fundamentals.py  test_group_ops.py  test_integration_rebalance.py  test_kite_execution.py  test_kite_provider.py  test_logical_ops.py  test_orders.py  test_providers.py  test_streaming_pipeline.py  test_targets.py  test_time_series.py  test_timescale_integration.py  test_timescale_units.py
tests/test_backtest_api/: conftest.py  test_alpha_validation.py  test_api_integration.py  test_backtest_schemas.py  test_backtest_windows.py  test_data_service_unit.py  test_db_dashboard_unit.py  test_health.py  test_inline_alpha.py  test_instrument_ohlcv_service.py  test_instruments.py  test_resolver.py  test_risk_metrics.py  test_runner_unit.py  test_serializer.py
(+7 files in other folders)
